--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 <body>
 
     <div class="card">
+        <p>What's the weather?</p>
         <form>
             <div class="form-group">
                 <input type="text" placeholder="Enter City Name" id="cityName">
